--- a/index.html
+++ b/index.html
@@ -57,15 +57,24 @@
               </section>
               <section id="skills">
                 <h2>Skills</h2>
-                <!-- Add a list of your technical skills here, with a focus on those relevant to software development -->
+                <h3>skills</h3>
+                <p>skills</p>
+                <ul>
+                  <li>skills</li>
+                  <li>skills</li>
+                  <li>skills</li>
+                  <li>skills</li>
+                </ul>
               </section>
               <section id="contact">
               <h2>Contact</h2>
-              <!-- Add your contact information here, such as your email address and social media links -->
+              <ul>
+                <li>me[at]mohammad.page</li>
+              </ul>
             </section>
           </main>
           <footer>
-            <p>Copyright 2021 Software Developer</p>
+            <p>Copyright 2023 Software Developer</p>
           </footer>
         </body>
       </html>
