some more changes

--- a/index.html
+++ b/index.html
@@ -1,81 +1,100 @@
-  <!DOCTYPE html>
-    <html>
-        <head>
-          <title>Mohammadhossein Moghaddas Jafari | Software Developer</title>
-          <link rel="stylesheet" type="text/css" href="styles.css">
-          <script src="script.js"></script>
-        </head>
-        <body>
-          <header>
-            <h1>Mo Jafari</h1>
-            <nav>
-              <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
-              </ul>
-            </nav>
-          </header>
-          <main>
-            <section id="about">
-                <h2>About</h2>
-                <p>I am currently studying for a BSc in Computer Science at Memorial University of Newfoundland and will be graduating in September. I am interested in working in the area of software development and am actively interested in gaining experience in this field. I have strong problem solving and analytical skills, and have developed a good understanding of programming during my degree (and co-op). I am also able to work well in a team and have good communication skills.</p>
-              </section>
-              <section id="projects">
-                <h2>Projects</h2>
-                <!-- Add a list of your projects here, with a short description and links to more information -->
-              </section>
-              <section id="experience">
-                <h2>Experience</h2>
-                <h3>Software Developer at Verafin</h3>
-                <p>Sept 2022 - Present</p>
-                <ul>
-                  <li>Developed software applications using various programming languages</li>
-                  <li>Performed software testing to ensure quality and performance</li>
-                  <li>Assisted with troubleshooting and resolving software issues</li>
-                  <li>Worked closely with other team members to deliver successful software products</li>
-                </ul>
-                <h3>Software Developer Internship at Verafin</h3>
-                <p>Jan 2022 - Sept 2022</p>
-                <ul>
-                  <li>Developed software applications using various programming languages</li>
-                  <li>Performed software testing to ensure quality and performance</li>
-                  <li>Assisted with troubleshooting and resolving software issues</li>
-                  <li>Worked closely with other team members to deliver successful software products</li>
-                </ul>
-              </section>
-              <section id="education">
-                <h2>Education</h2>
-                <h3>BSc in Computer Science at Memorial University of Newfoundland</h3>
-                <p>Sept 2018 - Sept 2022</p>
-                <ul>
-                  <li>Relevant coursework: Data Structures, Algorithms, Operating Systems, Computer Networks, Database Systems, Web Development, Mobile App Development</li>
-                </ul>
-              </section>
-              <section id="skills">
-                <h2>Skills</h2>
-                <h3>skills</h3>
-                <p>skills</p>
-                <ul>
-                  <li>skills</li>
-                  <li>skills</li>
-                  <li>skills</li>
-                  <li>skills</li>
-                </ul>
-              </section>
-              <section id="contact">
-              <h2>Contact</h2>
-              <ul>
-                <li>me[at]mohammad.page</li>
-              </ul>
-            </section>
-          </main>
-          <footer>
-            <p>Copyright 2023 Software Developer</p>
-          </footer>
-        </body>
-      </html>
-      
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Mohammadhossein Moghaddas Jafari | Software Developer</title>
+  <meta name="description" content="Mo Jafari's personal portfolio website">
+  <meta name="keywords" content="software developer, portfolio, computer science, Memorial University of Newfoundland">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <script src="script.js"></script>
+</head>
+
+<body>
+  <header>
+    <h1>Mo Jafari</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="about">
+      <h2>About</h2>
+      <p>I am currently studying for a BSc in Computer Science at Memorial University of Newfoundland and will be
+        graduating in June. I am interested in working in the area of software development and am actively
+        interested in gaining experience in this field. I have strong problem solving and analytical skills, and have
+        developed a good understanding of programming during my degree (and co-op). I am also able to work well in a
+        team and have good communication skills.</p>
+    </section>
+    <section id="projects">
+      <h2>Projects</h2>
+      <h3>Project One</h3>
+      <p>Sept 2022 - Present</p>
+      <ul>
+        <li>Details place holder</li>
+      </ul>
+      <h3>Prooject Two</h3>
+      <p>Sept 2020 - Sept 2022</p>
+      <ul>
+        <li>Details place holder</li>
+      </ul>
+    </section>
+    <section id="experience">
+      <h2>Experience</h2>
+      <h3>Software Developer at Verafin</h3>
+      <p>Sept 2022 - Present</p>
+      <ul>
+        <li>Developed software applications using various programming languages</li>
+        <li>Performed software testing to ensure quality and performance</li>
+        <li>Assisted with troubleshooting and resolving software issues</li>
+        <li>Worked closely with other team members to deliver successful software products</li>
+      </ul>
+      <h3>Software Developer Internship at Verafin</h3>
+      <p>Jan 2022 - Sept 2022</p>
+      <ul>
+        <li>Developed software applications using various programming languages</li>
+        <li>Performed software testing to ensure quality and performance</li>
+        <li>Assisted with troubleshooting and resolving software issues</li>
+        <li>Worked closely with other team members to deliver successful software products</li>
+      </ul>
+      <p><a href="resume.pdf">View my resume</a></p>
+    </section>
+    <section id="education">
+      <h2>Education</h2>
+      <h3>BSc in Computer Science at Memorial University of Newfoundland</h3>
+      <p>Sept 2018 - Sept 2022</p>
+      <ul>
+        <li>Relevant coursework: Data Structures, Algorithms, Operating Systems, Computer Networks, Database Systems,
+          Web Development, Mobile App Development</li>
+      </ul>
+    </section>
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Programming Languages: Java, C, C++, Python, JavaScript, HTML, CSS</li>
+        <li>Frameworks: React, Node.js, Express.js, Bootstrap</li>
+        <li>Tools: Git, GitHub, Visual Studio Code, Eclipse, IntelliJ, PyCharm, xCode</li>
+      </ul>
+    </section>
+    <section id="contact">
+      <h2>Contact</h2>
+      <ul>
+        <li>Email: me[at]mohammad.page </li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/mojafarii/">mojafari</a></li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>Copyright 2023 Software Developer</p>
+  </footer>
+</body>
+
+</html>
