--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </section>
   </main>
   <footer>
-    <p>Copyright 2023 Software Developer</p>
+    <p>Copyright 2023 Mohammad Jafari</p>
   </footer>
 </body>
 
