--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <title>Mohammadhossein Moghaddas Jafari | Software Developer</title>
-  <meta name="description" content="Mo Jafari's personal portfolio website">
-  <meta name="keywords" content="software developer, portfolio, computer science, Memorial University of Newfoundland">
+  <meta name="description" content="Mohammad Jafari's personal portfolio website">
+  <meta name="keywords" content="Mohammad Jafari, software developer, portfolio, computer science, Memorial University of Newfoundland">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -14,16 +14,17 @@
 <body>
   <header>
     <h1>Mo Jafari</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <button class="menu-btn">&#9776;</button>
+<nav class="menu">
+  <ul>
+    <li><a href="#about">About</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#experience">Experience</a></li>
+    <li><a href="#education">Education</a></li>
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
   </header>
   <main>
     <section id="about">
