some changes to the resume + menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <h1>Mo Jafari</h1>
-    <button class="menu-btn">&#9776;</button>
+    <button class="menu-btn"> <img src="menu.svg" alt=""></button>
 <nav class="menu">
   <ul>
     <li><a href="#about">About</a></li>
@@ -71,7 +71,7 @@
     <section id="education">
       <h2>Education</h2>
       <h3>BSc in Computer Science at Memorial University of Newfoundland</h3>
-      <p>Sept 2018 - Sept 2022</p>
+      <p>Sept 2018 - Present</p>
       <ul>
         <li>Relevant coursework: Data Structures, Algorithms, Operating Systems, Computer Networks, Database Systems,
           Web Development, Mobile App Development</li>
