--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1>Mo Jafari</h1>
+    <h1>Mohammad Jafari</h1>
     <button class="menu-btn"> <img src="menu.svg" alt=""></button>
 <nav class="menu">
   <ul>
