--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 terminalDiv.style.display = 'block';
                 inputContainer.style.display = 'flex';
             } else {
-                window.location.href = 'website/index.html';
+                window.location.href = 'website/';
             }
         }
 
