--- a/index.html
+++ b/index.html
@@ -46,12 +46,8 @@
             padding-left: 20px;
         }
         .nav {
-            position: fixed;
-            top: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: white;
-            padding: 10px;
+            text-align: center;
+            margin-bottom: 20px;
         }
     </style>
 </head>
