--- a/links.html
+++ b/links.html
@@ -145,7 +145,7 @@
         <div class="link-section">
             <h2>Music</h2>
             <div class="link-item">
-                <a href="#" target="_blank" rel="noopener noreferrer">Spotify Playlists</a>
+                <a href="spotify.html">Spotify Playlists</a>
                 <span class="link-description">My curated music collections</span>
             </div>
         </div>
@@ -165,7 +165,7 @@
                 <span class="link-description">Professional network and updates</span>
             </div>
             <div class="link-item">
-                <a href="#" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="https://github.com/mossein" target="_blank" rel="noopener noreferrer">GitHub</a>
                 <span class="link-description">Code repositories and projects</span>
             </div>
         </div>
@@ -173,7 +173,7 @@
         <div class="link-section">
             <h2>Other</h2>
             <div class="link-item">
-                <a href="#" target="_blank" rel="noopener noreferrer">Twitter</a>
+                <a href="https://x.com/mojafariii" target="_blank" rel="noopener noreferrer">Twitter</a>
                 <span class="link-description">Thoughts and updates</span>
             </div>
         </div>
