Update spotify.html with new playlist assorted

--- a/spotify.html
+++ b/spotify.html
@@ -188,6 +188,7 @@
     <script>
         const MY_PLAYLISTS = [
             '1yobC3D2VTxe02LapcyJld', // Mo's Core
+            '2jCoN6oQZ1H06xv56AUPVC', // Assorted
             '0nenVcxWt26KhKrcklulUS', // 80s Gems  
             '6pvhcPB0KE1cDh9LnPQ9Kt'  // My life
         ];
