Update spotify.html with tehran vibes

--- a/spotify.html
+++ b/spotify.html
@@ -167,7 +167,8 @@
             '1yobC3D2VTxe02LapcyJld', // Mo's Core
             '2jCoN6oQZ1H06xv56AUPVC', // Assorted
             '0nenVcxWt26KhKrcklulUS', // 80s Gems  
-            '6pvhcPB0KE1cDh9LnPQ9Kt'  // My life
+            '6pvhcPB0KE1cDh9LnPQ9Kt', // My life
+            '3QSY42sTLZiaC2cETC4zvy'  // Tehran Vibes
         ];
 
         function createPlaylistCard(playlistId) {
