--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       "jobTitle": "Software Developer",
       "worksFor": {
         "@type": "Organization",
-        "name": "Aucure"
+        "name": "Retellio"
       },
       "description": "Experienced software developer specializing in AI, cloud computing, and scalable software solutions.",
       "url": "https://www.mohammad.page",
