Add metadata and structured data to blog and links pages, create RSS feed and sitemap

--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -12,6 +12,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Future of AI in B2B Customer Research - Mohammad Jafari's Blog</title>
+    <link rel="canonical" href="https://www.mohammad.page/blog-post-1.html">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
+    <link rel="preconnect" href="https://www.google-analytics.com">
+    <meta name="description" content="Reflections on the evolving role of AI in B2B customer research and where it's heading.">
+    <meta property="og:title" content="The Future of AI in B2B Customer Research">
+    <meta property="og:description" content="Reflections on the evolving role of AI in B2B customer research and where it's heading.">
+    <meta property="og:url" content="https://www.mohammad.page/blog-post-1.html">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://mohammad.page/A7CD3391-7F05-40E0-9806-38E7EBB0ABE1.jpeg">
+    <meta property="og:site_name" content="Mohammad Jafari">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="The Future of AI in B2B Customer Research">
+    <meta name="twitter:description" content="Reflections on the evolving role of AI in B2B customer research and where it's heading.">
+    <meta name="twitter:image" content="https://mohammad.page/A7CD3391-7F05-40E0-9806-38E7EBB0ABE1.jpeg">
     <style>
         * {
             -webkit-font-smoothing: antialiased;
@@ -110,6 +125,36 @@
 
     <div class="content">
         <article>
+            <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "BlogPosting",
+              "headline": "The Future of AI in B2B Customer Research",
+              "author": {
+                "@type": "Person",
+                "name": "Mohammad Jafari"
+              },
+              "datePublished": "2024-08-28",
+              "dateModified": "2024-08-28",
+              "mainEntityOfPage": {
+                "@type": "WebPage",
+                "@id": "https://www.mohammad.page/blog-post-1.html"
+              },
+              "image": "https://mohammad.page/A7CD3391-7F05-40E0-9806-38E7EBB0ABE1.jpeg",
+              "description": "Reflections on the evolving role of AI in B2B customer research and where it's heading."
+            }
+            </script>
+            <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "BreadcrumbList",
+              "itemListElement": [
+                {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.mohammad.page/"},
+                {"@type": "ListItem", "position": 2, "name": "Blog", "item": "https://www.mohammad.page/blog.html"},
+                {"@type": "ListItem", "position": 3, "name": "The Future of AI in B2B Customer Research", "item": "https://www.mohammad.page/blog-post-1.html"}
+              ]
+            }
+            </script>
             <h1>The Future of AI in B2B Customer Research</h1>
             <p class="date">August 28, 2024</p>
             
