--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -11,6 +11,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>From Calls to Clarity: Shipping Insight Podcasts at Retellio - Mohammad Jafari's Blog</title>
+    <link rel="canonical" href="https://www.mohammad.page/blog-post-2.html">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
+    <link rel="preconnect" href="https://www.google-analytics.com">
     <style>
         * {
             -webkit-font-smoothing: antialiased;
@@ -85,6 +89,16 @@
         }
     </style>
     <meta name="description" content="How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom.">
+    <meta property="og:title" content="From Calls to Clarity: Shipping Insight Podcasts at Retellio">
+    <meta property="og:description" content="How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom.">
+    <meta property="og:url" content="https://www.mohammad.page/blog-post-2.html">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://mohammad.page/A7CD3391-7F05-40E0-9806-38E7EBB0ABE1.jpeg">
+    <meta property="og:site_name" content="Mohammad Jafari">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="From Calls to Clarity: Shipping Insight Podcasts at Retellio">
+    <meta name="twitter:description" content="How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom.">
+    <meta name="twitter:image" content="https://mohammad.page/A7CD3391-7F05-40E0-9806-38E7EBB0ABE1.jpeg">
 </head>
 <body>
     <nav class="nav">
@@ -93,6 +107,36 @@
 
     <div class="content">
         <article>
+            <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "BlogPosting",
+              "headline": "From Calls to Clarity: Shipping Insight Podcasts at Retellio",
+              "author": {
+                "@type": "Person",
+                "name": "Mohammad Jafari"
+              },
+              "datePublished": "2025-08-14",
+              "dateModified": "2025-08-14",
+              "mainEntityOfPage": {
+                "@type": "WebPage",
+                "@id": "https://www.mohammad.page/blog-post-2.html"
+              },
+              "image": "https://mohammad.page/A7CD3391-7F05-40E0-9806-38E7EBB0ABE1.jpeg",
+              "description": "How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom."
+            }
+            </script>
+            <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "BreadcrumbList",
+              "itemListElement": [
+                {"@type": "ListItem", "position": 1, "name": "Home", "item": "https://www.mohammad.page/"},
+                {"@type": "ListItem", "position": 2, "name": "Blog", "item": "https://www.mohammad.page/blog.html"},
+                {"@type": "ListItem", "position": 3, "name": "From Calls to Clarity: Shipping Insight Podcasts at Retellio", "item": "https://www.mohammad.page/blog-post-2.html"}
+              ]
+            }
+            </script>
             <h1>From Calls to Clarity: Shipping Insight Podcasts at Retellio</h1>
             <p class="date">August 14, 2025</p>
 
