--- a/links.html
+++ b/links.html
@@ -9,6 +9,20 @@
 
     gtag('config', 'G-40C7CVW886');
     </script>
+    <link rel="canonical" href="https://www.mohammad.page/links.html">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="preconnect" href="https://www.googletagmanager.com">
+    <link rel="preconnect" href="https://www.google-analytics.com">
+    <meta property="og:title" content="Links - Mohammad Jafari">
+    <meta property="og:description" content="Links to Mohammad Jafari's social profiles, playlists, and creative work.">
+    <meta property="og:url" content="https://www.mohammad.page/links.html">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://mohammad.page/A7CD3391-7F05-40E0-9806-38E7EBB0ABE1.jpeg">
+    <meta property="og:site_name" content="Mohammad Jafari">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Links - Mohammad Jafari">
+    <meta name="twitter:description" content="Links to Mohammad Jafari's social profiles, playlists, and creative work.">
+    <meta name="twitter:image" content="https://mohammad.page/A7CD3391-7F05-40E0-9806-38E7EBB0ABE1.jpeg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links - Mohammad Jafari</title>
