--- a/index.html
+++ b/index.html
@@ -109,6 +109,41 @@
             outline-offset: 2px;
             border-radius: 1px;
         }
+        .theme-toggle {
+            position: fixed;
+            top: 12px;
+            right: 12px;
+            width: 34px;
+            height: 34px;
+            border: none;
+            border-radius: 999px;
+            background: #ffffff;
+            color: #222222;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            font-size: 16px;
+            line-height: 1;
+            transition: background-color 0.2s ease, color 0.2s ease;
+            z-index: 1000;
+        }
+        .theme-toggle:hover { }
+        .dark body {
+            background: #0b0d10;
+            color: #e6e6e6;
+        }
+        .dark a { color: #66b2ff; }
+        .dark a:hover { border-bottom-color: #66b2ff; }
+        .dark .nav a:hover { background-color: rgba(102, 178, 255, 0.08); }
+        .dark img { box-shadow: 0 2px 16px rgba(0, 0, 0, 0.55); }
+        .dark ::selection { background: rgba(102, 178, 255, 0.2); color: #66b2ff; }
+        .dark .theme-toggle {
+            background: #14171a;
+            color: #e6e6e6;
+            border: none;
+            
+        }
         ul {
             padding-left: 20px;
         }
@@ -149,6 +184,7 @@
     <nav class="nav">
         <a href="index.html">Home</a> | <a href="blog.html">Blog</a> | <a href="links.html">Links</a>
     </nav>
+    <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">☾</button>
 
     <div class="content">
         <h1>Hi, I'm Mohammad!</h1>
@@ -173,6 +209,9 @@
         
 
     </div>
+    <script>
+    (function(){var r=document.documentElement;var t=localStorage.getItem('theme');if(!t&&window.matchMedia&&window.matchMedia('(prefers-color-scheme: dark)').matches){t='dark'}if(t==='dark'){r.classList.add('dark')}var b=document.getElementById('theme-toggle');function u(){var d=r.classList.toggle('dark');localStorage.setItem('theme',d?'dark':'light');b.textContent=d?'☀︎':'☾'}if(b){b.textContent=r.classList.contains('dark')?'☀︎':'☾';b.addEventListener('click',u)}})();
+    </script>
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
