--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -67,20 +67,10 @@
             outline-offset: 2px;
             border-radius: 1px;
         }
-        .nav {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .nav a {
-            padding: 4px 8px;
-            margin: 0 2px;
-            border-radius: 2px;
-            transition: background-color 0.2s ease;
-        }
-        .nav a:hover {
-            background-color: rgba(0, 102, 204, 0.05);
-            border-bottom: 1px solid transparent;
-        }
+        .nav {display:flex;justify-content:center;align-items:center;gap:12px;margin-bottom:24px}
+        .nav a{padding:6px 10px;border-radius:6px;transition:background-color .2s ease,color .2s ease}
+        .nav a:hover{background-color:rgba(0,102,204,.06);border-bottom:1px solid transparent}
+        .nav a[aria-current="page"]{font-weight:600;background-color:rgba(0,102,204,.08);border-bottom:1px solid transparent}
         .content {
             animation: fadeIn 0.6s ease-out;
         }
@@ -95,24 +85,22 @@
         .dark .nav a:hover{background-color:rgba(102,178,255,.08)}
         .dark ::selection{background:rgba(102,178,255,.2);color:#66b2ff}
         .dark .theme-toggle{background:#14171a;color:#e6e6e6;border:none}
+        .dark .nav a[aria-current="page"]{background-color:rgba(102,178,255,.12)}
     </style>
     <meta name="description" content="How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom.">
     <meta property="og:title" content="From Calls to Clarity: Shipping Insight Podcasts at Retellio">
     <meta property="og:description" content="How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom.">
     <meta property="og:url" content="https://www.mohammad.page/blog-post-2.html">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="https://mohammad.page/A7CD3391-7F05-40E0-9806-38E7EBB0ABE1.jpeg">
+    <meta property="og:image" content="https://mohammad.page/portrait.jpeg.jpeg">
     <meta property="og:site_name" content="Mohammad Jafari">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="From Calls to Clarity: Shipping Insight Podcasts at Retellio">
     <meta name="twitter:description" content="How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom.">
-    <meta name="twitter:image" content="https://mohammad.page/A7CD3391-7F05-40E0-9806-38E7EBB0ABE1.jpeg">
+    <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg.jpeg">
 </head>
 <body>
-    <nav class="nav">
-        <a href="index.html">Home</a> | <a href="blog.html">Blog</a> | <a href="links.html">Links</a>
-    </nav>
-    <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">☾</button>
+    <site-nav></site-nav>
 
     <div class="content">
         <article>
@@ -131,7 +119,7 @@
                 "@type": "WebPage",
                 "@id": "https://www.mohammad.page/blog-post-2.html"
               },
-              "image": "https://mohammad.page/A7CD3391-7F05-40E0-9806-38E7EBB0ABE1.jpeg",
+              "image": "https://mohammad.page/portrait.jpeg.jpeg",
               "description": "How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom."
             }
             </script>
@@ -194,7 +182,7 @@
 
         <p><a href="blog.html">← Back to blog</a></p>
     </div>
-    <script>(function(){var r=document.documentElement;var t=localStorage.getItem('theme');if(t==='dark'){r.classList.add('dark')}var b=document.getElementById('theme-toggle');function u(){var d=r.classList.toggle('dark');localStorage.setItem('theme',d?'dark':'light');b.textContent=d?'☀︎':'☾'}if(b){b.textContent=r.classList.contains('dark')?'☀︎':'☾';b.addEventListener('click',u)}})();</script>
+    <script src="nav.js" defer></script>
 </body>
 </html>
 
