update styles and font

--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preconnect" href="https://www.google-analytics.com">
+    <meta property="og:locale" content="en_US">
     <meta name="description" content="Reflections on the evolving role of AI in B2B customer research and where it's heading.">
     <meta property="og:title" content="The Future of AI in B2B Customer Research">
     <meta property="og:description" content="Reflections on the evolving role of AI in B2B customer research and where it's heading.">
@@ -28,6 +29,8 @@
     <meta name="twitter:title" content="The Future of AI in B2B Customer Research">
     <meta name="twitter:description" content="Reflections on the evolving role of AI in B2B customer research and where it's heading.">
     <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg">
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#0b0d10" media="(prefers-color-scheme: dark)">
     <style>
     </style>
 </head>
@@ -58,7 +61,7 @@
                 "@type": "WebPage",
                 "@id": "https://www.mohammad.page/blog-post-1.html"
               },
-              "image": "https://mohammad.page/portrait.jpeg.jpeg",
+              "image": "https://mohammad.page/portrait.jpeg",
               "description": "Reflections on the evolving role of AI in B2B customer research and where it's heading."
             }
             </script>
