--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -13,8 +13,10 @@
     <title>From Calls to Clarity: Shipping Insight Podcasts at Retellio - Mohammad Jafari's Blog</title>
     <link rel="canonical" href="https://www.mohammad.page/blog-post-2.html">
     <link rel="icon" href="/favicon.ico">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preconnect" href="https://www.google-analytics.com">
+    <meta property="og:locale" content="en_US">
     <style>
         * {
             -webkit-font-smoothing: antialiased;
@@ -92,12 +94,14 @@
     <meta property="og:description" content="How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom.">
     <meta property="og:url" content="https://www.mohammad.page/blog-post-2.html">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="https://mohammad.page/portrait.jpeg.jpeg">
+    <meta property="og:image" content="https://mohammad.page/portrait.jpeg">
     <meta property="og:site_name" content="Mohammad Jafari">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="From Calls to Clarity: Shipping Insight Podcasts at Retellio">
     <meta name="twitter:description" content="How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom.">
-    <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg.jpeg">
+    <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg">
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#0b0d10" media="(prefers-color-scheme: dark)">
 </head>
 <body>
     <site-nav></site-nav>
@@ -119,7 +123,7 @@
                 "@type": "WebPage",
                 "@id": "https://www.mohammad.page/blog-post-2.html"
               },
-              "image": "https://mohammad.page/portrait.jpeg.jpeg",
+              "image": "https://mohammad.page/portrait.jpeg",
               "description": "How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom."
             }
             </script>
