--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preconnect" href="https://www.google-analytics.com">
+    <meta property="og:locale" content="en_US">
     <meta name="description" content="Articles on AI, product, and engineering by Mohammad Jafari.">
     <meta property="og:title" content="Mohammad Jafari's Blog">
     <meta property="og:description" content="Articles on AI, product, and engineering by Mohammad Jafari.">
@@ -32,6 +33,8 @@
     <meta name="twitter:description" content="Articles on AI, product, and engineering by Mohammad Jafari.">
     <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg">
     <link rel="alternate" type="application/rss+xml" title="Mohammad Jafari Blog" href="/feed.xml" />
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#0b0d10" media="(prefers-color-scheme: dark)">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohammad Jafari's Blog</title>
