--- a/links.html
+++ b/links.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://www.googletagmanager.com">
     <link rel="preconnect" href="https://www.google-analytics.com">
+    <meta property="og:locale" content="en_US">
     <meta property="og:title" content="Links - Mohammad Jafari">
     <meta property="og:description" content="Links to Mohammad Jafari's social profiles, playlists, and creative work.">
     <meta property="og:url" content="https://www.mohammad.page/links.html">
@@ -24,6 +25,8 @@
     <meta name="twitter:title" content="Links - Mohammad Jafari">
     <meta name="twitter:description" content="Links to Mohammad Jafari's social profiles, playlists, and creative work.">
     <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg">
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#0b0d10" media="(prefers-color-scheme: dark)">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links - Mohammad Jafari</title>
