--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -30,7 +30,7 @@
     <meta name="twitter:description" content="Reflections on the evolving role of AI in B2B customer research and where it's heading.">
     <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg">
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#0b0d10" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
     <style>
     </style>
 </head>
