--- a/blog-post-2.html
+++ b/blog-post-2.html
@@ -101,7 +101,7 @@
     <meta name="twitter:description" content="How Retellio turns long customer calls into short, insight-rich podcasts delivered where teams work; integrating with Salesforce, HubSpot, Gong, and Zoom.">
     <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg">
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#0b0d10" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
 </head>
 <body>
     <site-nav></site-nav>
