--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
     <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg">
     <link rel="alternate" type="application/rss+xml" title="Mohammad Jafari Blog" href="/feed.xml" />
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#0b0d10" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohammad Jafari's Blog</title>
