--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="alternate" type="application/rss+xml" title="Mohammad Jafari Blog" href="/feed.xml" />
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#0b0d10" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
     <link rel="preload" as="image" href="/portrait.jpeg" fetchpriority="high">
 
     <meta property="og:title" content="Mohammad Jafari - Software Developer">
@@ -70,10 +70,10 @@
         
         <ul class="experience-list">
             <li><span class="role">Founding Software Developer at Retellio</span><span class="dates">Jul 2024 - Present</span><div class="summary">designing and shipping the platform end-to-end: <span class="hl">aws infra</span>, <span class="hl">ci/cd</span>, microservices, <span class="hl">llm/rag</span>, integrations (intercom, crm), and full observability; <span class="hl">99.9%+ uptime</span> with <span class="hl">daily releases</span>.</div></li>
-            <li><span class="role">Senior Software Developer at Nasdaq</span><span class="dates">Jan 2024 - Jul 2024</span><div class="summary">co-built and productionized an <span class="hl">entity research and negative news copilot</span>; led modules in retrieval, evaluation, and apis; ran on <span class="hl">aws via terraform</span> (lambda, s3, rds), <span class="hl">cutting review time</span> and <span class="hl">infra cost</span>.</div></li>
+            <li><span class="role">Senior Software Developer at Nasdaq</span><span class="dates">Jan 2024 - Jul 2024</span><div class="summary">contributed to nasdaq’s first generative ai product; developed retrieval, evaluation, and api modules; deployed on <span class="hl">aws</span> infrastructure using terraform; improved product review efficiency and reduced costs.</div></li>
             <li><span class="role">Software Developer at Verafin</span><span class="dates">May 2023 - Jan 2024</span><div class="summary">delivered <span class="hl">fraud‑detection</span> features in <span class="hl">java</span> services, tuned performance and alerts, and improved <span class="hl">reliability/on‑call</span> across environments.</div></li>
-            <li><span class="role">Software Developer (PT) at Verafin</span><span class="dates">Sep 2022 - Apr 2023</span><div class="summary"><span class="hl">part‑time</span> ownership of small services; shipped features, hardened tests, and handled production issues.</div></li>
-            <li><span class="role">Software Developer Intern at Verafin</span><span class="dates">Jan 2022 - Sep 2022</span><div class="summary">built automation and junit/selenium suites; raised coverage to <span class="hl">90%+</span> and <span class="hl">reduced regressions</span>.</div></li>
+            <li><span class="role">Software Developer (PT) at Verafin</span><span class="dates">Sep 2022 - Apr 2023</span><div class="summary">ownership of small services; shipped features, and handled production issues.</div></li>
+            <li><span class="role">Software Developer Intern at Verafin</span><span class="dates">Jan 2022 - Sep 2022</span><div class="summary">worked on new fraud/ml agents; owned multiple agents from design to rollout.</div></li>
             <li><span class="role">Web Developer at Memorial University of Newfoundland</span><span class="dates">Jan 2020 - Jan 2022</span><div class="summary">redesigned the student portal for <span class="hl">15k+ users</span>; implemented auth/session and scheduling api integration; shipped accessible, responsive ui.</div></li>
         </ul>
         
