--- a/links.html
+++ b/links.html
@@ -26,7 +26,7 @@
     <meta name="twitter:description" content="Links to Mohammad Jafari's social profiles, playlists, and creative work.">
     <meta name="twitter:image" content="https://mohammad.page/portrait.jpeg">
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-    <meta name="theme-color" content="#0b0d10" media="(prefers-color-scheme: dark)">
+    <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links - Mohammad Jafari</title>
